# brewup

./: .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: automated-tests.yml  create-release.yml  pypi-release.yml  update-codecov.yml
src/brewup/: __init__.py  __version__.py  brewup.py  cli.py  constants.py  default_config.toml
src/brewup/cli/: __init__.py  helpers.py
src/brewup/models/: __init__.py  homebrew.py  package.py
src/brewup/utils/: __init__.py  common_utils.py  config.py  console.py  logging.py
src/brewup/views/: __init__.py  common.py
tests/: __init__.py  cli_test.py  conftest.py
tests/fixtures/: brew_info_arq.json  brew_info_dav1d.json  brew_info_fork.json  brew_info_gping.json  brew_outdated_response.json  fixture_config.toml
